Got Button Reads working through debounced pressed state.
* tweaks to the SME what-will-be-a-library-component from developing the button-reading SM.
* Added GTK UI panel created with Glade.
* Changed GTK button type to toggle button for 2 buttons
* Swapped the reason-for-exit assignments for reason 2 and reason 3, so that the transition function can use the evData field directly.
* Refactpred tedlos_do() so that the scheduler is accessible from the board.

--- a/test/app/board.ui
+++ b/test/app/board.ui
@@ -14,30 +14,6 @@
         <property name="row_spacing">2</property>
         <property name="column_spacing">2</property>
         <child>
-          <object class="GtkButton" id="btn0">
-            <property name="label">Go</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-          </object>
-          <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">1</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkButton" id="btn1">
-            <property name="label">Pause</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-          </object>
-          <packing>
-            <property name="left_attach">1</property>
-            <property name="top_attach">1</property>
-          </packing>
-        </child>
-        <child>
           <object class="GtkButton" id="btnQuit">
             <property name="label">Quit</property>
             <property name="name">btnQuit</property>
@@ -57,6 +33,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
+            <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
           </object>
           <packing>
@@ -70,6 +47,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
+            <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
           </object>
           <packing>
@@ -83,6 +61,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
+            <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
           </object>
           <packing>
@@ -96,6 +75,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
+            <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
           </object>
           <packing>
@@ -109,6 +89,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
+            <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
           </object>
           <packing>
@@ -122,6 +103,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
+            <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
           </object>
           <packing>
@@ -135,6 +117,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
+            <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
           </object>
           <packing>
@@ -149,6 +132,7 @@
             <property name="can_focus">True</property>
             <property name="receives_default">False</property>
             <property name="image_position">bottom</property>
+            <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
           </object>
           <packing>
@@ -229,28 +213,140 @@
           </packing>
         </child>
         <child>
-          <placeholder/>
+          <object class="GtkRadioButton" id="rb0">
+            <property name="label" translatable="yes">GRN</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
+            <property name="active">True</property>
+            <property name="draw_indicator">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">0</property>
+            <property name="top_attach">2</property>
+          </packing>
         </child>
         <child>
-          <placeholder/>
+          <object class="GtkRadioButton" id="rb1">
+            <property name="label" translatable="yes">YEL</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
+            <property name="active">True</property>
+            <property name="draw_indicator">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">1</property>
+            <property name="top_attach">2</property>
+          </packing>
         </child>
         <child>
-          <placeholder/>
+          <object class="GtkRadioButton" id="rb2">
+            <property name="label" translatable="yes">RED</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
+            <property name="active">True</property>
+            <property name="draw_indicator">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">2</property>
+            <property name="top_attach">2</property>
+          </packing>
         </child>
         <child>
-          <placeholder/>
+          <object class="GtkRadioButton" id="rb3">
+            <property name="label" translatable="yes">3</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
+            <property name="active">True</property>
+            <property name="draw_indicator">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">3</property>
+            <property name="top_attach">2</property>
+          </packing>
         </child>
         <child>
-          <placeholder/>
+          <object class="GtkRadioButton" id="rb4">
+            <property name="label" translatable="yes">4</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
+            <property name="active">True</property>
+            <property name="draw_indicator">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">4</property>
+            <property name="top_attach">2</property>
+          </packing>
         </child>
         <child>
-          <placeholder/>
+          <object class="GtkRadioButton" id="rb5">
+            <property name="label" translatable="yes">5</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
+            <property name="active">True</property>
+            <property name="draw_indicator">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">5</property>
+            <property name="top_attach">2</property>
+          </packing>
         </child>
         <child>
-          <placeholder/>
+          <object class="GtkRadioButton" id="rb6">
+            <property name="label" translatable="yes">6</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
+            <property name="active">True</property>
+            <property name="draw_indicator">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">6</property>
+            <property name="top_attach">2</property>
+          </packing>
         </child>
         <child>
-          <placeholder/>
+          <object class="GtkRadioButton" id="rb7">
+            <property name="label" translatable="yes">SHIFT</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
+            <property name="active">True</property>
+            <property name="draw_indicator">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">7</property>
+            <property name="top_attach">2</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkToggleButton" id="btn0">
+            <property name="label" translatable="yes">Go</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">False</property>
+          </object>
+          <packing>
+            <property name="left_attach">0</property>
+            <property name="top_attach">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkToggleButton" id="btn1">
+            <property name="label" translatable="yes">Pause</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">1</property>
+            <property name="top_attach">1</property>
+          </packing>
         </child>
       </object>
     </child>
