Buttons: added timout transition from debounce-release back to button-stuck
* changed name of internal state "phase" from Normal, to Operational
* changed "find next state" function to avoid looking @ reason2, now reserved exclusively for "which button was pressed or released?"
* added another "reason3" enum to give the "find next state" function more resolution
* updated event-transition table with new information
* Swapped out GTK momentary pushbuttons for toggle pushbuttons
* added identifiers for each of the available buttons
* tweaking various minor things in pursuit of support of multiple buttons
* Moved design documentation out of totally-inappropriate place, to one that's closer to appropriate

--- a/test/app/board.ui
+++ b/test/app/board.ui
@@ -141,30 +141,6 @@
           </packing>
         </child>
         <child>
-          <object class="GtkButton" id="btn2">
-            <property name="label">Walk</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-          </object>
-          <packing>
-            <property name="left_attach">2</property>
-            <property name="top_attach">1</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkButton" id="btn3">
-            <property name="label">Yellow</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-          </object>
-          <packing>
-            <property name="left_attach">3</property>
-            <property name="top_attach">1</property>
-          </packing>
-        </child>
-        <child>
           <object class="GtkButton" id="btn4">
             <property name="label">4</property>
             <property name="visible">True</property>
@@ -345,6 +321,30 @@
           </object>
           <packing>
             <property name="left_attach">1</property>
+            <property name="top_attach">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkToggleButton" id="btn2">
+            <property name="label" translatable="yes">Walk</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">2</property>
+            <property name="top_attach">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkToggleButton" id="btn3">
+            <property name="label" translatable="yes">Yellow</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+          </object>
+          <packing>
+            <property name="left_attach">3</property>
             <property name="top_attach">1</property>
           </packing>
         </child>
