#10 Create DO system for GTK board, Part 3.
* For the time being, use the existing OS 10ms task to call the DO pump.
* Fixed the inability to use a control as a binary indicator. Had to clear the "Inconsistent' checkbox within Glade.
* While within Glad, tried to make checkbuttons to be read only
  * clear "Sensitive" checkbox and all options related to focus.
* Fixed ability to both set and clear the DO bitmap image.
* Remove "how's it work" function that created secondary window to show radio buttons.

--- a/test/app/board.ui
+++ b/test/app/board.ui
@@ -17,7 +17,9 @@
           <object class="GtkCheckButton" id="ind0">
             <property name="label" translatable="yes">GRN</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="sensitive">False</property>
+            <property name="can_focus">False</property>
+            <property name="focus_on_click">False</property>
             <property name="receives_default">False</property>
             <property name="draw_indicator">True</property>
           </object>
@@ -30,7 +32,9 @@
           <object class="GtkCheckButton" id="ind1">
             <property name="label" translatable="yes">YEL</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="sensitive">False</property>
+            <property name="can_focus">False</property>
+            <property name="focus_on_click">False</property>
             <property name="receives_default">False</property>
             <property name="draw_indicator">True</property>
           </object>
@@ -43,7 +47,9 @@
           <object class="GtkCheckButton" id="ind2">
             <property name="label" translatable="yes">RED</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="sensitive">False</property>
+            <property name="can_focus">False</property>
+            <property name="focus_on_click">False</property>
             <property name="receives_default">False</property>
             <property name="draw_indicator">True</property>
           </object>
@@ -56,7 +62,9 @@
           <object class="GtkCheckButton" id="ind3">
             <property name="label" translatable="yes">3</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="sensitive">False</property>
+            <property name="can_focus">False</property>
+            <property name="focus_on_click">False</property>
             <property name="receives_default">False</property>
             <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
@@ -70,7 +78,9 @@
           <object class="GtkCheckButton" id="ind4">
             <property name="label" translatable="yes">4</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="sensitive">False</property>
+            <property name="can_focus">False</property>
+            <property name="focus_on_click">False</property>
             <property name="receives_default">False</property>
             <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
@@ -84,7 +94,9 @@
           <object class="GtkCheckButton" id="ind5">
             <property name="label" translatable="yes">5</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="sensitive">False</property>
+            <property name="can_focus">False</property>
+            <property name="focus_on_click">False</property>
             <property name="receives_default">False</property>
             <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
@@ -98,7 +110,9 @@
           <object class="GtkCheckButton" id="ind6">
             <property name="label" translatable="yes">6</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="sensitive">False</property>
+            <property name="can_focus">False</property>
+            <property name="focus_on_click">False</property>
             <property name="receives_default">False</property>
             <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
@@ -112,7 +126,9 @@
           <object class="GtkCheckButton" id="ind7">
             <property name="label" translatable="yes">shift</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="sensitive">False</property>
+            <property name="can_focus">False</property>
+            <property name="focus_on_click">False</property>
             <property name="receives_default">False</property>
             <property name="image_position">bottom</property>
             <property name="inconsistent">True</property>
