Demo App #21 Make Walk Button Work
* Move enumeration for Logical On and Off out of board package and into main library.
  * Didn't want to introduce a dependency from the application to the board.
* Move `SET()` targets for Board-level LEDs out of board common header and into board-specific header
* Add `SET()` target for LED 4, to be used as Walk sign
* moved GTK button-click handler so it's a sister of the press and release handlers
Demo App #21 Make Walk Button Work

* Move enumeration for Logical On and Off out of board package and into main library.
  * Didn't want to introduce a dependency from the application to the board.
* Move `SET()` targets for Board-level LEDs out of board common header and into board-specific header
* Add `SET()` target for LED 4, to be used as Walk sign

* Ensure Walk is exinguished at end of Green segment

--- a/test/app/board.ui
+++ b/test/app/board.ui
@@ -60,13 +60,12 @@
         </child>
         <child>
           <object class="GtkCheckButton" id="ind3">
-            <property name="label" translatable="yes">3</property>
+            <property name="label" translatable="yes">Walk</property>
             <property name="visible">True</property>
             <property name="sensitive">False</property>
             <property name="can_focus">False</property>
             <property name="focus_on_click">False</property>
             <property name="receives_default">False</property>
-            <property name="inconsistent">True</property>
             <property name="draw_indicator">True</property>
           </object>
           <packing>
